Update login and transaction routes, enhance frontend features

--- a/frontend/src/features/accounts/AccountItem.astro
+++ b/frontend/src/features/accounts/AccountItem.astro
@@ -7,7 +7,7 @@ import { Icon } from 'astro-icon/components';
 <li id={id} class="bg-teal-50 flex gap-4 justify-between items-center flex-col md:flex-row rounded-2xl border border-teal-100" data-status="inputs-deshabilitados">
   <div class="flex flex-col md:flex-row flex-grow w-full md:w-auto rounded-2xl p-2 items-center">
     <input class="w-full text-center outline-none" type="text" value={name} readonly>
-    <input class="w-full text-center outline-none text-green-600" type="text" value={currency} readonly>
+    <input class="w-full text-center font-medium outline-none text-teal-800" type="text" value={currency} readonly>
     <input class="w-full text-center outline-none" type="text" value={balance} readonly>
   </div>
   <div class="flex gap-2 items-center">
