--- a/frontend/src/features/transactions/TransactionsList.astro
+++ b/frontend/src/features/transactions/TransactionsList.astro
@@ -141,7 +141,8 @@ import { Icon } from 'astro-icon/components';
             
             // Adjuntamos la nueva fila a la tabla
             transactionListBody.appendChild(row);
-            console.log(row);            
+            // console.log(row);
+            
             
         });
     };
@@ -290,7 +291,7 @@ import { Icon } from 'astro-icon/components';
             };
 
             await transactionsModule.updateTransaction(updatedTransaction);
-            console.log(updatedTransaction);
+            // console.log(updatedTransaction);
 
         }
     }
