--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -3,7 +3,7 @@ import AuthUnprotected from "../features/auth/AuthUnprotected.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Home">
+<Layout title="SyncSpend">
   <AuthUnprotected>
     <main class="h-screen flex flex-col justify-center gap-4 px-4 max-w-7xl mx-auto md:items-center md:w-[70%] lg:flex-row overflow-y-hidden">
       <div class="space-y-8 max-w-3xl">
