--- a/frontend/src/features/navigation/Navigation.astro
+++ b/frontend/src/features/navigation/Navigation.astro
@@ -2,7 +2,6 @@
 import logoPng from '../../assets/Logo.png'
 ---
 
-<!-- TODO: Menu movil -->
 <nav class="bg-teal-700 text-white fixed top-0 left-0 right-0 z-50">
     <div class="max-w-7xl mx-auto h-16 flex items-center justify-between">
       <div class="flex items-center gap-2 h-full">
@@ -10,18 +9,19 @@ import logoPng from '../../assets/Logo.png'
         <h2 class="font-medium text-xl">SyncSpend</h2>
       </div>
       <div id="nav-links" class="flex items-center gap-4">
+
         <div id="nav-desktop-links" class="hidden md:flex items-center gap-4">
+
         <div id="nav-user-container">
           <p id="nav-user-name" class="px-3 py-1 rounded-full bg-white/10 text-white transition duration-300 ease-in-out hover:bg-white/20"></p>
         </div>
+
       </div>
         <button id="logout-btn" class="md:hidden flex items-center justify-center p-1 rounded-md bg-white text-teal-700">
           <svg class="w-8 h-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
         </button>
-        <!-- {links.map(link => <a class="hidden md:block text-white no-underline hover:underline" href={link.path}>{link.name}</a>)} -->
-      </div>
     </div>
 </nav>
 
@@ -52,6 +52,8 @@ import logoPng from '../../assets/Logo.png'
 
   user.subscribe(user => {
     if (!user) return;
+    console.log(user);
+    
     const userName = user.email.split('@')[0];
     navUserName.innerHTML = `Bienvenido ${userName}`;
   });
